# idx-fundamental-analysis

./: .env.example  .gitignore  README.md  m1.py  main.py  pyproject.toml  req.txt
builders/: builder_interface.py  database_builder.py  dcf.py  excel.py  fundamental_analyser.py  spreadsheet.py
builders/analysers/: __init__.py  fundamental_analyser.py  key_analysis_analyser.py  sentiment_analyser.py  stock_price_analyser.py
controllers/: stock_controller.py
db/: __init__.py  session.py
db/models/: __init__.py  corp_action.py  fundamental.py  key_analysis.py  sentiment.py  stock.py  stock_price.py
providers/: idx.py  stockbit.py  yfinance.py
schemas/: __init__.py  fundamental.py  key_analysis.py  sentiment.py  stock.py  stock_price.py
services/: google_drive_service.py  stockbit_api_client.py
utils/: helpers.py  logger_config.py  stockbit_http_request.py
